--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,9 @@
                 <groupId>com.github.vincentparra</groupId>
                 <artifactId>beag-plugin</artifactId>
                 <version>2.1.6</version>
+                <configuration>
+                    <isFailable>false</isFailable>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
