--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.github.vincentparra</groupId>
             <artifactId>beag-plugin</artifactId>
-            <version>2.2.6</version>
+            <version>2.2.9</version>
         </dependency>
     </dependencies>
 
@@ -41,7 +41,10 @@
             <plugin>
                 <groupId>com.github.vincentparra</groupId>
                 <artifactId>beag-plugin</artifactId>
-                <version>2.2.6</version>
+                <version>2.2.9</version>
+                <configuration>
+                    <excludedFiles>src/java/com/rocs/beag/plugin/test/BeagPluginTest.java</excludedFiles>
+                <configuration>
                 <executions>
                     <execution>
                         <goals>
